--- a/eds232-lab1.Rmd
+++ b/eds232-lab1.Rmd
@@ -513,9 +513,176 @@ gridExtra::grid.arrange(p1, p2, nrow = 1)
 
 ```
 
+# Species: Evaluate 
+
+## Setup 
+
+```{r}
+librarian::shelf(
+  dismo, # species distribution modeling: maxent(), predict(), evaluate(), 
+  dplyr, ggplot2, GGally, here, maptools, readr, 
+  raster, readr, rsample, sf,
+  usdm)  # uncertainty analysis for species distribution models: vifcor()
+select = dplyr::select
+
+# options
+set.seed(42)
+options(
+  scipen = 999,
+  readr.show_col_types = F)
+ggplot2::theme_set(ggplot2::theme_light())
+
+# paths
+dir_data      <- here("data/sdm")
+pts_geo       <- file.path(dir_data, "pts.geojson")
+env_stack_grd <- file.path(dir_data, "env_stack.grd")
+mdl_maxv_rds  <- file.path(dir_data, "mdl_maxent_vif.rds")
+
+# read points of observation: presence (1) and absence (0)
+pts <- read_sf(pts_geo)
+
+# read raster stack of environment
+env_stack <- raster::stack(env_stack_grd)
+```
+
+## 1.1 Split observations into training and testing 
+
+```{r}
+# create training set with 80% of full data
+pts_split  <- rsample::initial_split(
+  pts, prop = 0.8, strata = "present")
+pts_train  <- rsample::training(pts_split)
+pts_test   <- rsample::testing(pts_split)
+
+pts_train_p <- pts_train %>% 
+  filter(present == 1) %>% 
+  as_Spatial()
+pts_train_a <- pts_train %>% 
+  filter(present == 0) %>% 
+  as_Spatial()
+```
 
 
 
+## 2 Calibrate: Model Selection
+```{r}
+# show pairs plot before multicollinearity reduction with vifcor()
+pairs(env_stack)
+
+# each point in the scatter plot on the lower triangle represents a pixel that is placed on the x and y axis based on the variables it is comparing. 
+# the correlation is how tight the correspondance of the scatter plot is 
+# the numbers are smaller where there is less correlation 
+
+# the highest vif is the highest multicorrelation 
+
+
+# calculate variance inflation factor per predictor, a metric of multicollinearity between variables
+vif(env_stack)
+
+
+# stepwise reduce predictors, based on a max correlation of 0.7 (max 1)
+v <- vifcor(env_stack, th=0.7) 
+v
+# gives you a reduced set of predictors 
+
+
+# reduce enviromental raster stack by 
+env_stack_v <- usdm::exclude(env_stack, v)
+
+
+# show pairs plot after multicollinearity reduction with vifcor()
+pairs(env_stack_v)
+# using the v above, none of them should have a correlation coefficient grater than 0.7 because of the threshold. 
+
+```
+
+```{r}
+# fit a maximum entropy model
+if (!file.exists(mdl_maxv_rds)){
+  mdl_maxv <- maxent(env_stack_v, sf::as_Spatial(pts_train))
+  readr::write_rds(mdl_maxv, mdl_maxv_rds)
+}
+mdl_maxv <- read_rds(mdl_maxv_rds)
+
+# plot variable contributions per predictor
+plot(mdl_maxv)
+
+
+# plot term plots
+response(mdl_maxv)
+```
+
+```{r}
+# predict
+y_maxv <- predict(env_stack, mdl_maxv) #, ext=ext, progress='')
+
+plot(y_maxv, main='Maxent, raw prediction')
+data(wrld_simpl, package="maptools")
+plot(wrld_simpl, add=TRUE, border='dark grey')
+```
+
+## Evaluate: Model Performance
+
+### 3.1 Area Under the Curve (AUC), Reciever Operater Characteristic (ROC) Curve and Confusion Matrix
+```{r}
+
+pts_test_p <- pts_test %>% 
+  filter(present == 1) %>% 
+  as_Spatial()
+pts_test_a <- pts_test %>% 
+  filter(present == 0) %>% 
+  as_Spatial()
+
+y_maxv <- predict(mdl_maxv, env_stack)
+#plot(y_maxv)
+
+# this is a prediction and youre comparing the prediction to our known presence and absence points. 
+e <- dismo::evaluate(
+  p     = pts_test_p,
+  a     = pts_test_a, 
+  model = mdl_maxv,
+  x     = env_stack)
+e
+
+plot(e, 'ROC')
+
+thr <- threshold(e)[['spec_sens']]
+thr
+
+# of the presences observed, how many true predictions are we getting. 
+p_true <- na.omit(extract(y_maxv, pts_test_p) >= thr)
+# of the absences observed, how many true predictions are we getting 
+# anything less than the threshold will be a 0
+a_true <- na.omit(extract(y_maxv, pts_test_a) < thr)
+
+
+# TPR & TNR is true positive and negative rates 
+# (t)rue/(f)alse (p)ositive/(n)egative rates
+# p_true is a vector of trues and falses. 
+# this gives us a rate 
+tpr <- sum(p_true)/length(p_true)
+
+# how many we observed were present but we predicted absence 
+fnr <- sum(!p_true)/length(p_true)
+fpr <- sum(!a_true)/length(a_true)
+tnr <- sum(a_true)/length(a_true)
+#the terms above populate the matrix below 
+matrix(
+  c(tpr, fnr,
+    fpr, tnr), 
+  nrow=2, dimnames = list(
+    c("present_obs", "absent_obs"),
+    c("present_pred", "absent_pred")))
+
+# add point to ROC plot
+points(fpr, tpr, pch=23, bg="blue")
+# any of the points along the curve represent a different value for 0 and 1 which is different than the axis 
+
+
+# Ymax v is the predicted maxent from the environmental stack 
+# applying the threshold to give you the distribution of 1s in green and 0s in grey for habitat no habitat. 
+plot(y_maxv > thr)
+```
 
 
 
